# futils

./: .gitignore  CMakeLists.txt  README.md  TODO  callback.hpp  clock.hpp  ecs.hpp  flog.hpp  fusing.hpp  futils.hpp  index.md  ini.hpp  log.hpp  main.cpp  sigCatch.hpp
Demo/: CMakeLists.txt  SFMLRender.hpp  main.cpp
SFMLRender/: CMakeLists.txt  library.h
binaries/demo/: CMakeLists.txt
binaries/demo/Scenes/: Menu.ini
binaries/demo/config/: config.ini
binaries/demo/include/: fender.hpp
binaries/fender/src/: IRender.cpp  IScene.cpp
binaries/fender/src/ECS/: Entity.cpp
binaries/fender/src/ncurses/: CursesRender.cpp  CursesRender.hpp
binaries/fender/src/sfml/: SFMLRender.cpp
demo/: CMakeLists.txt  demo  logfile.txt  main.cpp  todo
demo/Scenes/: Menu.cpp  Menu.hpp  Menu.ini  Splashscreen.cpp  Splashscreen.hpp  Splashscreen.ini  timeline.ini
demo/Scenes/Headers/: Splashscreen.hpp
demo/Scenes/Intro/: Splashscreen.cpp  Splashscreen.ini  Splashscreen.json
demo/config/: config.ini
demo/include/: AllScenes.hpp  Demo.cpp  Demo.hpp  DynamicLibrary.hpp  Factory.cpp  Factory.hpp  Fini.hpp  ForwardScenes.hpp  fender.h  feucs.hpp  futils.hpp
demo/lib/: fender
docs/: dloader.md  ecs.md  ini.md  log.md  scopelock.md
documentation/: callback.md  clock.md  sigCatch.md
fender/: CMakeLists.txt
fender/include/: Fini.hpp  flog.hpp  futils.hpp
fender/release/: fender.h  fender.hpp
fender/src/: IRender.cpp  IScene.cpp  Manager.cpp
fender/src/ECS/: Component.cpp  System.cpp
fender/src/ECS/Components/: Object2d.cpp
fender/src/ncurses/: CursesRender.cpp  CursesRender.hpp
fender/src/sfml/: SFMLRender.cpp  SFMLRender.hpp
feuCS/: CMakeLists.txt  feucs.hpp  main.cpp
fini/: CMakeLists.txt  Fini.hpp  flog.hpp  futils.hpp  main.cpp
include/: Fini.hpp  fecs.hpp  futils.hpp
log/: CMakeLists.txt  flog.hpp  futils.hpp  main.cpp
projects/fender/: CMakeLists.txt  compile.sh  createFenderProject.sh  rebuild.sh
projects/fender/demo/: CMakeLists.txt  SplashscreenTmp.ini  demo  logfile.txt  main.cpp
projects/fender/demo/Scenes/: Menu.hpp  Splashscreen.hpp
projects/fender/demo/config/: fender.ini
projects/fender/demo/include/: AllScenes.hpp  App.hpp  Demo.hpp  Factory.cpp  callback.hpp  clock.hpp  components.hpp  demo.hpp  dloader.hpp  dynamicLibrary.hpp  ecs.hpp  events.hpp  extras.hpp  fender.hpp  futils.hpp  ini.hpp  log.hpp  requests.hpp  scopelock.hpp  sigCatch.hpp  systems.hpp
projects/fender/demo/src/: main.cpp
projects/fender/demo/src/App/: App.cpp
projects/fender/demo/src/App/Modules/: WindowTest.cpp  WindowTest.hpp
projects/fender/doc/: Fender - Project Plan.md  Fender.md  Network.md  ecs.md  index.md
projects/fender/doc/components/: Camera.md  Children.md  Color.md  Image.md  Meta.md  Transform.md
projects/fender/doc/entities/: Camera.md  GameObject.md  Window.md
projects/fender/doc/systems/: Camera.md  Meta.md  SplashScreen.md  Transform.md
projects/fender/fenderGettingStarted/: CMakeLists.txt  all.sh  build.sh  compile.sh  update.sh
projects/fender/fenderGettingStarted/futils/: IniManager.hpp  RutilsParsingTools.hpp  clock.hpp  declaredType.hpp  ecs.hpp  futils.hpp  mediator.hpp  modules.hpp  namedMaps.hpp  queue.hpp  range.hpp  rendering.hpp
projects/fender/fenderGettingStarted/include/: fender.hpp
projects/fender/fenderGettingStarted/src/: main.cpp
projects/fender/include/: CursesRender.hpp  IRender.hpp  SFMLRender.hpp  components.hpp  events.hpp  extras.hpp  fender.hpp  position.hpp  requests.hpp  systems.hpp
projects/fender/release/: fender.hpp
projects/fender/src/: Fender.cpp  IRender.cpp  IScene.cpp  Manager.cpp
projects/fender/src/Components/: AbsoluteTransform.cpp  AbsoluteTransform.hpp  Border.cpp  Border.hpp  Box.cpp  Box.hpp  Camera.hpp  ChildInfo.cpp  ChildInfo.hpp  Children.hpp  Color.cpp  Color.hpp  Components.md  GameObject.hpp  Image.cpp  Image.hpp  Input.hpp  Meta.cpp  Meta.hpp  Transform.cpp  Transform.hpp  Window.cpp  Window.hpp  World.hpp
projects/fender/src/Entities/: Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Image.hpp  Input.cpp  Input.hpp  Window.cpp  Window.hpp  Window.md  World.cpp  World.hpp
projects/fender/src/Systems/: Log.cpp  Log.hpp  Log.md  SplashScreen.cpp  SplashScreen.hpp
projects/fender/src/Systems/Renderer/: Meta.cpp  Meta.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  WindowManager.cpp  WindowManager.hpp
projects/fender/src/Systems/SFML/: Border.cpp  Border.hpp  Camera.cpp  Camera.hpp  Children.cpp  Children.hpp  Grid.cpp  Grid.hpp  Image.cpp  Image.hpp  Input.cpp  Input.hpp  SFMLRenderer.cpp  SFMLRenderer.hpp  SFMLRenderer.md  System.hpp  Window.cpp  Window.hpp
projects/fender/src/ecs/: Component.cpp  System.cpp
projects/fender/src/ecs/Components/: Object2d.cpp
projects/fender/src/ecs/Systems/: Renderer.cpp  SplashScreen.cpp  Transform.cpp  WindowManager.cpp
projects/fender/src/engine/Components/: Object2d.cpp
projects/fender/src/engine/Entities/: Background.cpp
projects/fender/src/engine/Systems/: Image.cpp  Log.cpp  Renderer.cpp  RendererSubSystem.cpp  SplashScreen.cpp  WindowManager.cpp
projects/fender/src/ncurses/: CursesRender.hpp
projects/fender/src/renderers/ncurses/: CursesRender.cpp
projects/fender/src/renderers/sfml/: SFMLRender.cpp
projects/fender/src/sfml/: SFMLRender.hpp
tests/: CMakeLists.txt  Callback.cpp  Callback.cpp~  futils_t.cpp  main.cpp
utils/: IniManager.hpp  RutilsException.hpp  RutilsParsingTools.hpp  agent.hpp  callback.hpp  customTraits.hpp  datapacket.hpp  dloader.hpp  ecs.hpp  fstring.hpp  futils.hpp  goToBinDir.h  goToBinDir.hpp  ini.hpp  inputKeys.hpp  log.hpp  math.hpp  mediator.hpp  modules.hpp  rendering.hpp  scopelock.hpp  types.hpp
